src/scss/App.scss
@import url(https://fonts.googleapis.com/css?family=Montserrat:regular,700);
@import 'reset.css';
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
a {
  color: inherit;
  text-decoration: none;
}

html,
body {
  height: 100%;
  color: white;
}
body {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  font-size: 16px;
  background-color: #000000cf;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

#root {
  height: 100%;
}

.wrapper {
  min-height: 100%;
  display: flex;
  flex-direction: column;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
}

.main {
  flex-grow: 1;
  position: relative;
  margin: 90px 0;
}
@media (max-width: 1330px) {
  .container {
    max-width: 990px;
  }
}
@media (max-width: 992px) {
  .container {
    max-width: 750px;
  }
}
@media (max-width: 767px) {
  .container {
    max-width: none;
    margin: 0 10px;
  }
}
@media (max-width: 450px) {
}

::-webkit-scrollbar {
  width: 4px;
  background-color: #0f0f0f;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: tomato;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  background-color: #2e2e2e;
}

